# developer_inspiration_assistant

./: .env.example  .gitignore  LICENSE  LICENSE.txt  README.md  app.py  assistant.py  check_env.py  config.py  config.yaml  constraints.txt  count_all_awards.py  count_awards.py  debug_pagination_area.html  debug_publications.html  ingest.py  ingestion.py  inspect_chroma.py  mkdocs.yml  projects.json  pyproject.toml  requirements-dev.txt  requirements.txt  scrape_readytensor.py  scrape_readytensor_awards.py  scrape_readytensor_clean.py  scrape_readytensor_final.py  scrape_readytensor_ldjson.py  scrape_readytensor_nextdata.py  scraper.py  setup.sh  test_env.py  test_packages.py  validate_readytensor.py  verify_awards.py
data/: readytensor_awards.json  readytensor_publications.json
debug/: debug_publications.html
docs/: about.md  publication.md  usage.md
evaluation/: rag_eval.py  retrieval_eval.py  sample_queries.json
readytensor_projects/: agentconnect_decentralized_collaboration_framework.txt  ai_agent_9woT2FSMrdAy.txt  capital_compass_an_agentic_ai_application_for_inve.txt  cityguard_ai_local_incident_monitoring_system_5c9u.txt  entity_break_the_input_output_paradigm_with_intent.txt  foundit_computer_vision_powered_lost_and_found_mob.txt  inventory_data_generator_hi30VBb8b6Iy.txt  kestrel_llm_powered_cybersecurity_research_assista.txt  langchain_documentation_aichatbot_bMAPSlhmfXSE.txt  llmknowledge3_a_modern_ai_knowledge_management_pla.txt  nextrade_a_multi_agent_power_application_to_conduc.txt  personal_portfolio_assistant_wbwq50AIliJE.txt  (+8 more)
(+1 files in other folders)
